adionado login/adionar produtos/verificação de login e logout

--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,8 @@
         <li><a href="/verUsuarios.html">Ver Usuarios</a></li>
         <li><a href="/verUsuariosView.html">Ver Usuarios com view</a></li>
         <li><a href="/grafico.html">Grafico</a></li>
+        <li><a href="/login.html">Login</a></li>
+        <li><a href="/adicionarProduto.html">adicionar produto</a></li>
     </ul>
 </body>
 </html>
