--- a/public/adicionarProduto.html
+++ b/public/adicionarProduto.html
@@ -59,8 +59,6 @@
         <label for="descricaoTecnica">Descrição Técnica:</label>
         <textarea id="descricaoTecnica" name="descricaoTecnica"></textarea>
 
-        <label for="precoDeAquisicao">Preço de Aquisição:</label>
-        <input type="number" id="precoDeAquisicao" name="precoDeAquisicao" step="0.01" required>
 
         <label for="fabricante">Fabricante:</label>
         <input type="text" id="fabricante" name="fabricante">
@@ -71,8 +69,6 @@
         <label for="enderecamento">Endereçamento:</label>
         <input type="text" id="enderecamento" name="enderecamento">
 
-        <label for="validade">Validade:</label>
-        <input type="date" id="validade" name="validade">
 
         <label for="observacoesAdicional">Observações Adicionais:</label>
         <textarea id="observacoesAdicional" name="observacoesAdicional"></textarea>
@@ -93,53 +89,45 @@
     </form>
 
     <script>
-        document.getElementById('formAdicionarProduto').addEventListener('submit', async function (event) {
-            event.preventDefault();
+       document.getElementById('formAdicionarProduto').addEventListener('submit', async function (event) {
+    event.preventDefault();
 
-            // Capturar dados do formulário
-            const produto = {
-                codigo: document.getElementById('codigo').value,
-                nomeBasico: document.getElementById('nomeBasico').value,
-                nomeModificador: document.getElementById('nomeModificador').value,
-                descricaoTecnica: document.getElementById('descricaoTecnica').value,
-                precoDeAquisicao: document.getElementById('precoDeAquisicao').value,
-                fabricante: document.getElementById('fabricante').value,
-                fornecedor: document.getElementById('fornecedor').value,
-                enderecamento: document.getElementById('enderecamento').value,
-                validade: document.getElementById('validade').value,
-                observacoesAdicional: document.getElementById('observacoesAdicional').value,
-                unidade: document.getElementById('unidade').value,
-                precoDeVenda: document.getElementById('precoDeVenda').value,
-                fragilidade: document.getElementById('fragilidade').value,
-                inseridoPor: JSON.parse(localStorage.getItem('usuarioLogado')).email // Captura o usuário logado
-            };
+    const usuarioLogado = JSON.parse(localStorage.getItem('usuarioLogado'));
+    const SNProfessor = localStorage.getItem('SNProfessor');
 
-            async function adicionarProduto(produto) {
-                const usuarioLogado = JSON.parse(localStorage.getItem('usuarioLogado'));
-                const SNProfessor = localStorage.getItem('SNProfessor');
-            
-                try {
-                    const response = await fetch('http://localhost:3000/adicionar-produto', {
-                        method: 'POST',
-                        headers: { 'Content-Type': 'application/json' },
-                        body: JSON.stringify({
-                            ...produto,
-                            inseridoPor: usuarioLogado.email,
-                            SNProfessor: usuarioLogado.tipo === 'professor' ? SNProfessor : null,
-                        }),
-                    });
-            
-                    if (response.ok) {
-                        alert('Produto adicionado com sucesso!');
-                    } else {
-                        const errorMessage = await response.text();
-                        alert('Erro: ' + errorMessage);
-                    }
-                } catch (error) {
-                    alert('Erro ao adicionar produto: ' + error.message);
-                }
-            }
+    const produto = {
+        codigo: document.getElementById('codigo').value,
+        nomeBasico: document.getElementById('nomeBasico').value,
+        nomeModificador: document.getElementById('nomeModificador').value,
+        descricaoTecnica: document.getElementById('descricaoTecnica').value,
+        fabricante: document.getElementById('fabricante').value,
+        fornecedor: document.getElementById('fornecedor').value,
+        enderecamento: document.getElementById('enderecamento').value,
+        observacoesAdicional: document.getElementById('observacoesAdicional').value,
+        unidade: document.getElementById('unidade').value,
+        precoDeVenda: document.getElementById('precoDeVenda').value,
+        fragilidade: document.getElementById('fragilidade').value,
+        inseridoPor: usuarioLogado.tipo === 'professor' ? SNProfessor : usuarioLogado.email,
+    };
+
+    try {
+        const response = await fetch('http://localhost:3000/adicionar-produto', {
+            method: 'POST',
+            headers: { 'Content-Type': 'application/json' },
+            body: JSON.stringify(produto),
         });
+
+        if (response.ok) {
+            alert('Produto adicionado com sucesso!');
+        } else {
+            const errorMessage = await response.text();
+            alert('Erro: ' + errorMessage);
+        }
+    } catch (error) {
+        alert('Erro ao adicionar produto: ' + error.message);
+    }
+});
+
     </script>
 </body>
 </html>
