--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
         <li><a href="/grafico.html">Grafico</a></li>
         <li><a href="/login.html">Login</a></li>
         <li><a href="/adicionarProduto.html">adicionar produto</a></li>
+        <li><a href="/categoria.html"> categoria</a></li>
     </ul>
 </body>
 </html>
