Adicionando caminho para a parte financeira

--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,7 @@
     <li><a href="/login.html">Login</a></li>
     <li><a href="/adicionarProduto.html">adicionar produto</a></li>
     <li><a href="/categoria.html"> categoria</a></li>
+    <li><a href="financeiro.html">financeiro</a></li>
 </body>
 <script>
     var chart; // Variável para armazenar a instância do gráfico
