--- a/public/index.html
+++ b/public/index.html
@@ -12,14 +12,34 @@
     <div id="chart" ></div> 
     <input type="checkbox" id="mudar" onclick="trocarGrafico()"> Alternar Gráfico
 </div>
-    <li><a href="/adicionarUsuario.html">Adicionar Usuário</a></li>
+<div class="button-container">
+    <div class="button green">
+      <p>Cadastro</p>
+      <small>Cadastrar Novo Item</small>
+    </div>
+    <div class="button red">
+      <p>Edição</p>
+      <small>Editar/Excluir Itens</small>
+    </div>
+    <div class="button blue">
+      <p>Estoque</p>
+      <small>WMS</small>
+    </div>
+    <div class="button yellow">
+      <p>Financeiro</p>
+      <small>Movimentações</small>
+    </div>
+  </div>
+
+
+    <!-- <li><a href="/adicionarUsuario.html">Adicionar Usuário</a></li>
     <li><a href="/deletarUsuario.html">Deletar Usuario</a></li>
     <li><a href="/verUsuarios.html">Ver Usuarios</a></li>
     <li><a href="/verUsuariosView.html">Ver Usuarios com view</a></li>
     <li><a href="/grafico.html">Grafico</a></li>
     <li><a href="/login.html">Login</a></li>
     <li><a href="/adicionarProduto.html">adicionar produto</a></li>
-    <li><a href="/categoria.html"> categoria</a></li>
+    <li><a href="/categoria.html"> categoria</a></li> -->
 </body>
 <script>
     var chart; // Variável para armazenar a instância do gráfico
