tela inicial icons

--- a/public/index.html
+++ b/public/index.html
@@ -13,21 +13,33 @@
     <input type="checkbox" id="mudar" onclick="trocarGrafico()"> Alternar Gráfico
 </div>
 <div class="button-container">
-    <div class="button green">
+   <div class="button green">
+    <img src="imagens/Vector (1).svg" alt="">
+    <div class="texto">
       <p>Cadastro</p>
       <small>Cadastrar Novo Item</small>
     </div>
+    </div>
     <div class="button red">
+        <img src="imagens/Vector.svg" alt="">
+        <div class="texto">
       <p>Edição</p>
       <small>Editar/Excluir Itens</small>
     </div>
+    </div>
     <div class="button blue">
+        <img src="imagens/vaadin_storage.svg" alt="">
+        <div class="texto">
       <p>Estoque</p>
       <small>WMS</small>
     </div>
+    </div>
     <div class="button yellow">
+        <img src="imagens/ic_outline-attach-money.svg" alt="">
+        <div class="texto">
       <p>Financeiro</p>
       <small>Movimentações</small>
+    </div>
     </div>
   </div>
 
