customização tela inicial

--- a/public/telaInicial.html
+++ b/public/telaInicial.html
@@ -5,13 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exibir Gráfico</title>
     <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/telaInicial.css">
 </head>
 <body>
     <button id="logoutButton" style="display:none;" >Sair</button>
     <div class="container-grafico">
     <div id="chart" ></div> 
-    <input type="checkbox" id="mudar" onclick="trocarGrafico()"> Alternar Gráfico
+    <input type="checkbox" id="mudar" onclick="trocarGrafico()"> 
+    <label for="mudar" id="Alternar"><span>Alternar Gráfico</span></label>
+    
 </div>
 <div class="button-container">
    <div class="button green">
