--- a/public/financeiro.html
+++ b/public/financeiro.html
@@ -89,14 +89,34 @@
             </div>
 
             <div class="input-container">
+                <input type="text" id="productFont" placeholder=" " required>
+                <label for="productFont">Nome do fornecedor</label>
+            </div>
+
+            <div class="input-container">
+              <input type="number" id="productCode" min="0" max="9999999999999" placeholder=" " required>
+              <label for="productCode">Código do produto</label>
+          </div>
+
+          <div class="input-container">
+            <input type="number" id="quantityReceived" placeholder=" " required>
+            <label for="quantityReceived">Quantidade recebida</label>
+        </div>
+
+        <div class="input-container">
+          <input type="number" id="numbLote" placeholder=" " required>
+          <label for="numbLote">N° do Lote</label>
+      </div>
+
+            <div class="input-container">
                 <input type="date" id="receivingDate" placeholder=" " required>
                 <label for="receivingDate">Data de recebimento</label>
             </div>
 
             <div class="input-container">
-                <input type="number" id="quantityReceived" placeholder=" " required>
-                <label for="quantityReceived">Quantidade recebida</label>
-            </div>
+              <input type="date" id="productValidade" placeholder=" " required>
+              <label for="productValidade">Data de Validade</label>
+          </div>
 
             <button type="submit" id="submitButton">Cadastrar</button>
         </form>
