--- a/public/financeiro.html
+++ b/public/financeiro.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Menu Lateral</title>
-    <link rel="stylesheet" href="financeiro.css" />
+    <link rel="stylesheet" href="css/financeiro.css" />
+    <link rel="stylesheet" href="css/navbar.css">
   </head>
   <body>
     <!---------------NAVBAR-------------------------------------------------->
@@ -120,6 +121,7 @@
     </div>
     <!----------------------------------------------------------------------------------------------------------------------------------------->
 
-    <script src="financeiro.js"></script>
+    <script src="js/financeiro.js"></script>
+    <script src="js/navbar.js"></script>
   </body>
 </html>
