arrumando responsividade, menu e finalização do layout do estoque

--- a/public/layout.html
+++ b/public/layout.html
@@ -12,6 +12,7 @@
         rel="stylesheet">
     <title>SGA - Layout do Estoque</title>
     <link rel="stylesheet" href="css/layout.css">
+    <link rel="stylesheet" href="css/navbar.css">
 </head>
 
 <body>
@@ -88,5 +89,5 @@
         <img src="imgCADASTRO/gatinhoRodapé.svg" alt="">
     </div>
 </body>
-<script src="js/financeiro.js"></script>
+<script src="js/navbar.js"></script>
 </html>
