--- a/public/cadastro1.html
+++ b/public/cadastro1.html
@@ -11,17 +11,76 @@
         href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
         rel="stylesheet">
         <link rel="stylesheet" href="css/cadastro1.css">
+        <link rel="stylesheet" href="css/navbar.css">
     <title>SGA - Cadastro</title>
 </head>
 
 <body>
     <!-- CABEÇALHO -->
-    <!-- <header>
-        <div class="navbar">
-            <div class="menu"></div>
-            <h1>Cadastrar Novo Item</h1>
+   <!---------------NAVBAR-------------------------------------------------->
+   <div class="navbar-caixa">
+    <div class="conteudo-nav">
+        <div class="texto-nav">Cadastrar Novo Item</div>
+
+        <button id="menu-btn" class="menu-btn">&#9776;</button>
+    </div>
+
+    <!--------------------------------HAMBURGUER------------------------------------------------------------------------------------>
+    <div id="sidebar" class="sidebar">
+        <button id="close-btn" class="close-btn">&times;</button>
+        <img src="imglogineusuario/senaibranco.svg" alt="" />
+        <h3>Menu</h3>
+        <ul>
+
+
+            <li class="home">
+                <a href="#" id="home">
+                    <div class="home"></div>
+                    <span>Home</span>
+                </a>
+            </li>
+
+
+            <li class="cadastrar">
+                <a href="#" id="cadas">
+                    <div class="box-of-good-good"></div>
+                    <span>Cadastrar</span>
+                </a>
+            </li>
+
+
+            <li class="edicao">
+                <a href="#" id="edicao">
+                    <div class="pencil"></div>
+                    <span>Edição</span>
+                </a>
+            </li>
+
+
+            <li class="estoque">
+                <a href="#" id="esto">
+                    <div class="boxes-of-good-good"></div>
+                    <span>Estoque</span>
+                </a>
+            </li>
+
+
+            <li class="financeiro">
+                <a href="#" id="finan">
+                    <div class="financial"></div>
+                    <span>Financeiro</span>
+                </a>
+            </li>
+        </ul>
+
+        <div class="container-logos">
+            <h4>SGA - Sistema de Gerenciamento de Armazém</h4>
+            <img src="imagens/logo-emp.svg" id="logo-gato" alt="" /><img src="imagens/logo-soft.svg"
+                id="logo-cubo" />
         </div>
-    </header> -->
+    </div>
+</div>
+<!-------------------------------------------------------------------------------------------------------------------------------->
 
     <section class="cadastro">
         <div class="flex">
@@ -93,6 +152,8 @@
             </div>
         </div>
     </section>
+
+    <script src="js/navbar.js"></script>
 </body>
 
 </html>
