terminando tela do catalogo, faltando parte de cima, navbar e filtro

--- a/public/catalogo.html
+++ b/public/catalogo.html
@@ -68,7 +68,7 @@ const row = `
     <td>${produtos.FABRICANTE}</td>
     <td class="colunaAbrirDetalhes" id="${produtos.CODIGO}"><button onclick=abrirLinha() class="btnAbrirLinha" id="${produtos.CODIGO}">+</button></td>
 </tr>
-<tr id="linhaDetalhe">
+<tr id="linhaDetalhe" style="display: none;">
     <td colspan="6">
         <div class="containerLinhaOculta">
         <div class="containerLinhaDetalhes">
