--- a/public/cadastro1.html
+++ b/public/cadastro1.html
@@ -81,7 +81,7 @@
     </div>
 </div>
 <!-------------------------------------------------------------------------------------------------------------------------------->
-
+<!-- <form id="formAdicional"> -->
     <section class="cadastro">
         <div class="flex">
 
@@ -152,6 +152,43 @@
             </div>
         </div>
     </section>
+<!-- </form> -->
+
+    <!-- SCRIPT -->
+    <script>
+        document.getElementById('formAdicional').addEventListener('submit', async function (event) {
+     event.preventDefault();
+ 
+     const usuarioLogado = JSON.parse(localStorage.getItem('usuarioLogado'));
+     const SNProfessor = localStorage.getItem('SNProfessor');
+ 
+     const produto = {
+         codigo: document.getElementById('codigo').value,
+         nomebasico: document.getElementById('nomebasico').value,
+         nomeModificador: document.getElementById('nomemodificador').value,
+         descricao: document.getElementById('descricao').value,
+         inseridoPor: usuarioLogado.tipo === 'professor' ? SNProfessor : usuarioLogado.email,
+     };
+ 
+     try {
+         const response = await fetch('http://localhost:3000/adicionar-produto', {
+             method: 'POST',
+             headers: { 'Content-Type': 'application/json' },
+             body: JSON.stringify(produto),
+         });
+ 
+         if (response.ok) {
+             alert('Produto cadastrado com sucesso!');
+         } else {
+             const errorMessage = await response.text();
+             alert('Erro: ' + errorMessage);
+         }
+     } catch (error) {
+         alert('Erro ao cadastrar produto: ' + error.message);
+     }
+ });
+ 
+     </script>
 
     <script src="js/navbar.js"></script>
 </body>
