processo de linkar o banco de dados com a tabela do financeiro

--- a/public/financeiro.html
+++ b/public/financeiro.html
@@ -164,11 +164,13 @@
 
             <button id="filtrar">Aplicar Filtros</button>
         </div>
+    </div>
 
-    <div class="products-list" id="products-list"></div>
-    <div class="table-container" id="table-container"></div>
-
-
+<div class="tabela-recebimentos">
+    <div class="table-container" id="table-container">
+      
+  </div>   
+</div>
 
     <script src="js/financeiro.js"></script>
     <script src="js/navbar.js"></script>
