botão do estoque novo

--- a/public/cadastro2.html
+++ b/public/cadastro2.html
@@ -124,9 +124,9 @@
 
                     <div class="InformacoesdeEntrada">
                         <h1>Informações de Entrada</h1>
-                        <div class="caixaTexto">
+                        <!-- <div class="caixaTexto">
                             <input id="estoque" type="text" placeholder="Estoque Mínimo">
-                        </div>
+                        </div> -->
 
                         <div class="caixaTexto">
                             <input id="fabricante" type="text" placeholder="Fabricante">
@@ -169,7 +169,7 @@
      const SNProfessor = localStorage.getItem('SNProfessor');
  
      const produto = {
-         estoque: document.getElementById('estoque').value,
+        //  estoque: document.getElementById('estoque').value,
          fabricante: document.getElementById('fabricante').value,
          fornecedor: document.getElementById('fornecedor').value,
          fragilidade: document.getElementById('sim').value,
