tela de professor adicionada

--- a/public/index.html
+++ b/public/index.html
@@ -87,7 +87,7 @@
                         // Verifica o tipo de usuário e redireciona após o alerta
                         if (data.usuario.tipo === 'professor') {
                             localStorage.setItem('SNProfessor', data.usuario.SN);
-                            window.location.href = "telaInical-Professor.html"; 
+                            window.location.href = "telaInicial-Professor.html"; 
                         } else {
                             window.location.href = "telaInicial.html";
                         }
