--- a/public/telaInicial-Professor.html
+++ b/public/telaInicial-Professor.html
@@ -6,7 +6,7 @@
     <title>Exibir Gráfico</title>
     <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script> <!-- Adicionando SweetAlert -->
-    <link rel="stylesheet" href="css/telaInicial.css">
+    <link rel="stylesheet" href="css/telaInicial-Professor.css">
 </head>
 <body>
     <div class="navbar">  
