no processo de fazer a função de pesquisa da tela catalogo

--- a/public/catalogo.html
+++ b/public/catalogo.html
@@ -69,7 +69,7 @@
     </div>
     <!-- acabou as mudanças -->
     <div id="area"><input type="text" id="entrada"></div>
-    <div><button id="pesquisar">Pesquisar</button></div>
+    <div><button id="pesquisar" onclick="pesquisarProduto()">Pesquisar</button></div>
 </div>
 
 <div class="container">
