tela professor, ajustes layout

--- a/public/telaInicial-Professor.html
+++ b/public/telaInicial-Professor.html
@@ -11,6 +11,7 @@
 <body>
     <div class="navbar">  
         <img src="imagens/SENAI_logo.png" alt="Logo do senai" id="logo_senai">
+        <a href="adicionarUsuario.html" id="adicionarUsuario">Adicionar usuário</a>
         <img src="imagens/icon_sair.png" alt="icone de sair" id="logoutButton">
     </div>
 <section>
