--- a/public/financeiro.html
+++ b/public/financeiro.html
@@ -74,7 +74,7 @@
     </div>
 
     <div class="conteudo_pag">
-      <button id="caixa-recebimento" onclick="toggleForm()">Recebimento</button>
+      <button id="caixa-recebimento" onclick="toggleForm()"><div class="circle">+</div>Recebimento</button>
 
       <div id="formContainer">
         <h2>Novo Recebimento</h2>
@@ -93,7 +93,7 @@
           <div class="input-container">
             <input
               type="number"
-              id="productCode"
+              id="codigo"
               min="0"
               max="9999999999999"
               placeholder=" "
@@ -113,19 +113,74 @@
           </div>
 
           <div class="input-container">
-            <input type="date" id="receivingDate" placeholder=" " required />
-            <label for="receivingDate">Data de recebimento</label>
+            <input type="date" id="dataRecebimento" placeholder=" " required />
+            <label for="dataRecebimento">Data de recebimento</label>
           </div>
 
           <div class="input-container">
-            <input type="date" id="productValidade" placeholder=" " required />
-            <label for="productValidade">Data de Validade</label>
+            <input type="date" id="validade" placeholder=" " required />
+            <label for="validade">Data de Validade</label>
+          </div>
+
+          <div class="input-container">
+            <input type="number" step="0.01" id="precoAqui" placeholder=" " required />
+            <label for="validade">Preço de Aquisição</label>
           </div>
 
           <button type="submit" id="submitButton"><h3>Cadastrar</h3></button>
         </form>
       </div>
     </div>
+
+<!--  SCRIPT QUE LIGA OS INPUT AO BACK-END  -->
+
+<script>
+  
+document.getElementById('registrationForm').addEventListener('submit', async function (event) {
+  event.preventDefault();
+
+  const usuarioLogado = JSON.parse(localStorage.getItem('usuarioLogado'));
+
+  const recebimento = {
+      nomeBasico: document.getElementById('productName').value,
+      fornecedor: document.getElementById('productFont').value,
+      codigo: document.getElementById('codigo').value,
+      quantidade: document.getElementById('quantityReceived').value,
+      numbLote: document.getElementById('numbLote').value,
+      dataRecebimento: document.getElementById('dataRecebimento').value,
+      validade: document.getElementById('validade').value,
+      precoAqui: document.getElementById('precoAqui').value,
+      inseridoPor: usuarioLogado.tipo === 'professor' ? SNProfessor : usuarioLogado.email,
+  };
+
+
+
+  try {
+      const response = await fetch('http://localhost:3000/adicionar-recebimento', {
+          method: 'POST',
+          headers: { 'Content-Type': 'application/json' },
+          body: JSON.stringify(recebimento),
+      });
+
+      if (response.ok) {
+          alert('recebimento adicionado com sucesso!');
+      } else {
+          const errorMessage = await response.text();
+          alert('Erro: ' + errorMessage);
+      }
+  } catch (error) {
+      alert('Erro ao adicionar recebimento ' + error.message);
+  }
+});
+
+</script>
+
+
+
+
+
+
+
     <!----------------------------------------------------------------------------------------------------------------------------------------->
     <button id="toggle-filter">Filtrar Recebimentos &#9660;</button>
 
@@ -165,14 +220,18 @@
             <button id="filtrar">Aplicar Filtros</button>
         </div>
     </div>
+    <div class="header">
+      <span class="title">Itens recebidos</span>
+      <div class="divider"></div>
+      </div>
 
 <div class="tabela-recebimentos">
     <div class="table-container" id="table-container">
-      
-  </div>   
+      </div>   
 </div>
 
     <script src="js/financeiro.js"></script>
     <script src="js/navbar.js"></script>
+    <script src="js/app.js"></script>
   </body>
 </html>
