arrumando o menu nas telas de cadastro para ficar verde sem passar o mouse

--- a/public/cadastro5.html
+++ b/public/cadastro5.html
@@ -132,7 +132,7 @@
                             </div>
                         </div>
                         <div class="caixaTexto">
-                            <textarea name="" id="observação" placeholder="Observação Adicional"></textarea>
+                            <textarea style="resize: none" name="" id="observação" placeholder="Observação Adicional"></textarea>
                         </div>
                     </div>
                     <div class="setas">
