--- a/public/cadastro3.html
+++ b/public/cadastro3.html
@@ -18,69 +18,74 @@
 <body>
     <!-- CABEÇALHO -->
     <!---------------NAVBAR-------------------------------------------------->
-   <div class="navbar-caixa">
-    <div class="conteudo-nav">
-        <div class="texto-nav">Cadastrar Novo Item</div>
+    <div class="navbar-caixa">
+        <div class="conteudo-nav">
+            <div class="texto-nav">Cadastrar Novo Item</div>
 
-        <button id="menu-btn" class="menu-btn">&#9776;</button>
-    </div>
+            <button id="menu-btn" class="menu-btn">&#9776;</button>
+        </div>
 
-    <!--------------------------------HAMBURGUER------------------------------------------------------------------------------------>
-    <div id="sidebar" class="sidebar">
-        <button id="close-btn" class="close-btn">&times;</button>
-        <img src="imglogineusuario/senaibranco.svg" alt="" />
-        <h3>Menu</h3>
-        <ul>
-
-
-            <li class="home">
-                <a href="#" id="home">
-                    <div class="home"></div>
-                    <span>Home</span>
-                </a>
-            </li>
+        <!--------------------------------HAMBURGUER------------------------------------------------------------------------------------>
+        <div id="sidebar" class="sidebar">
+            <button id="close-btn" class="close-btn">&times;</button>
+            <img src="imglogineusuario/senaibranco.svg" alt="" />
+            <h3>Menu</h3>
+            <ul>
 
 
-            <li class="cadastrar">
-                <a href="#" id="cadas">
-                    <div class="box-of-good-good"></div>
-                    <span>Cadastrar</span>
-                </a>
-            </li>
+                <li class="home">
+                    <a href="#" id="home">
+                        <div class="home"></div>
+                        <span>Home</span>
+                    </a>
+                </li>
 
 
-            <li class="edicao">
-                <a href="#" id="edicao">
-                    <div class="pencil"></div>
-                    <span>Edição</span>
-                </a>
-            </li>
+                <li class="cadastrar">
+                    <a href="#" id="cadas">
+                        <div class="box-of-good-good"></div>
+                        <span>Cadastrar</span>
+                    </a>
+                </li>
 
 
-            <li class="estoque">
-                <a href="#" id="esto">
-                    <div class="boxes-of-good-good"></div>
-                    <span>Estoque</span>
-                </a>
-            </li>
+                <li class="edicao">
+                    <a href="#" id="edicao">
+                        <div class="pencil"></div>
+                        <span>Edição</span>
+                    </a>
+                </li>
 
 
-            <li class="financeiro">
-                <a href="#" id="finan">
-                    <div class="financial"></div>
-                    <span>Financeiro</span>
-                </a>
-            </li>
-        </ul>
+                <li class="estoque-item">
+                    <a href="#" id="esto" class="estoque-link">
+                        <div class="boxes-of-good-good"></div>
+                        <span>Estoque</span>
+                    </a>
+                    <ul id="estoque-submenu" class="submenu">
+                        <li><a href="catalogo.html">Catálogo</a></li>
+                        <li><a href="estoque_real.html">Estoque Real e Inventário</a></li>
+                        <li><a href="layout.html">Layout do Estoque</a></li>
+                    </ul>
+                </li>
 
-        <div class="container-logos">
-            <h4>SGA - Sistema de Gerenciamento de Armazém</h4>
-            <img src="imagens/logo-emp.svg" id="logo-gato" alt="" /><img src="imagens/logo-soft.svg"
-                id="logo-cubo" />
+
+                <li class="financeiro">
+                    <a href="#" id="finan">
+                        <div class="financial"></div>
+                        <span>Financeiro</span>
+                    </a>
+                </li>
+            </ul>
+
+            <div class="container-logos">
+                <h4>SGA - Sistema de Gerenciamento de Armazém</h4>
+                <img src="imagens/logo-emp.svg" id="logo-gato" alt="" /><img src="imagens/logo-soft.svg"
+                    id="logo-cubo" />
+            </div>
         </div>
     </div>
-</div>
-<!-------------------------------------------------------------------------------------------------------------------------------->
+    <!-------------------------------------------------------------------------------------------------------------------------------->
 
     <section class="cadastro">
         <div class="flex">
@@ -156,39 +161,85 @@
     </section>
     <!-- SCRIPT -->
     <script>
-        document.getElementById('formAdicionarProduto').addEventListener('submit', async function (event) {
-     event.preventDefault();
- 
-     const usuarioLogado = JSON.parse(localStorage.getItem('usuarioLogado'));
-     const SNProfessor = localStorage.getItem('SNProfessor');
- 
-     const produto = {
-         categoria: document.getElementById('categoria').value,
-         enderecamento: document.getElementById('rua').value,
-         enderecamento: document.getElementById('coluna').value,
-         enderecamento: document.getElementById('andar').value,
-         inseridoPor: usuarioLogado.tipo === 'professor' ? SNProfessor : usuarioLogado.email,
-     };
- 
-     try {
-         const response = await fetch('http://localhost:3000/adicionar-produto', {
-             method: 'POST',
-             headers: { 'Content-Type': 'application/json' },
-             body: JSON.stringify(produto),
-         });
- 
-         if (response.ok) {
-             alert('Produto cadastrado com sucesso!');
-         } else {
-             const errorMessage = await response.text();
-             alert('Erro: ' + errorMessage);
-         }
-     } catch (error) {
-         alert('Erro ao cadastrar produto: ' + error.message);
-     }
- });
- 
-     </script>
+        document.addEventListener('DOMContentLoaded', function () {
+
+            const estoqueItem = document.querySelector('.estoque-item');
+            const estoqueSubMenu = document.getElementById('estoque-submenu');
+            const estoqueLink = document.getElementById('esto');
+            const iconeEstoque = estoqueLink.querySelector('.boxes-of-good-good');
+
+            const submenuLinks = estoqueSubMenu.querySelectorAll('a');
+            submenuLinks.forEach(link => {
+                link.addEventListener('click', function (event) {
+                    event.stopPropagation();
+                });
+            });
+
+            estoqueItem.addEventListener('click', function (event) {
+                event.preventDefault();
+
+                estoqueItem.classList.toggle('active');
+                if (estoqueItem.classList.contains('active')) {
+                    estoqueSubMenu.style.display = "block";
+                    estoqueItem.style.backgroundColor = "#000";
+                    estoqueLink.style.color = "#319DF6";
+                    iconeEstoque.style.backgroundImage = "url(\"data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 32 32'%3E%3Cpath fill='%23319df6' d='M10 4v11h12V4zm2 2h2v4l2-2l2 2V6h2v7h-8zM3 17v11h12V17zm14 0v11h12V17zM5 19h2v4l2-2l2 2v-4h2v7H5zm14 0h2v4l2-2l2 2v-4h2v7h-8z'/%3E%3C/svg%3E\")";
+                } else {
+                    estoqueSubMenu.style.display = "none";
+                    estoqueItem.style.backgroundColor = "";
+                    estoqueLink.style.color = "";
+                    iconeEstoque.style.backgroundImage = "";
+                }
+            });
+
+            // Fecha o dropdown ao clicar fora
+            document.addEventListener('click', function (event) {
+                if (!estoqueItem.contains(event.target)) {
+                    estoqueItem.classList.remove('active');
+                    estoqueSubMenu.style.display = "none";
+                    estoqueItem.style.backgroundColor = "";
+                    estoqueLink.style.color = "";
+                    iconeEstoque.style.backgroundImage = "";
+                }
+            });
+
+
+        });
+
+
+        document.getElementById('formAdicional').addEventListener('submit', async function (event) {
+            event.preventDefault();
+
+            const usuarioLogado = JSON.parse(localStorage.getItem('usuarioLogado'));
+            const SNProfessor = localStorage.getItem('SNProfessor');
+
+            const produto = {
+                codigo: document.getElementById('codigo').value,
+                nomebasico: document.getElementById('nomebasico').value,
+                nomeModificador: document.getElementById('nomemodificador').value,
+                descricao: document.getElementById('descricao').value,
+                inseridoPor: usuarioLogado.tipo === 'professor' ? SNProfessor : usuarioLogado.email,
+            };
+
+            try {
+                const response = await fetch('http://localhost:3000/adicionar-produto', {
+                    method: 'POST',
+                    headers: { 'Content-Type': 'application/json' },
+                    body: JSON.stringify(produto),
+                });
+
+                if (response.ok) {
+                    alert('Produto cadastrado com sucesso!');
+                } else {
+                    const errorMessage = await response.text();
+                    alert('Erro: ' + errorMessage);
+                }
+            } catch (error) {
+                alert('Erro ao cadastrar produto: ' + error.message);
+            }
+        });
+
+    </script>
 
     <script src="js/navbar.js"></script>
 </body>
