--- a/public/financeiro.html
+++ b/public/financeiro.html
@@ -225,10 +225,11 @@ document.getElementById('registrationForm').addEventListener('submit', async fun
       <div class="divider"></div>
       </div>
 
-<div class="tabela-recebimentos">
-    <div class="table-container" id="table-container">
-      </div>   
-</div>
+      <div class="tabela-recebimentos">
+        
+        <div class="table-container" id="table-container"></div>
+      
+    </div>
 
     <script src="js/financeiro.js"></script>
     <script src="js/navbar.js"></script>
